5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1601_820.log
== TEST (2019-04-25 23:25:46) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR =int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 23:31:09) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR =int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50= valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 22
    print(int(notas_R$50))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 23:31:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR =int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50= valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    notas50= valor // 50
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 23:32:24) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor =int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50= valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 23:32:37) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor =int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas50= valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto50 = valor % 50

# Quantidade de notas de R$ 10
notas10 = resto50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10 // 2

print(int(notas50))
print(int(notas10))
print(int(notas2))

-- EXECUTION TIME:
0.154705
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
